; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/msm/disp/dpu1/extr_dpu_hw_ctl.c__setup_ctl_ops.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/msm/disp/dpu1/extr_dpu_hw_ctl.c__setup_ctl_ops.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dpu_hw_ctl_ops = type { i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32 }

@dpu_hw_ctl_clear_pending_flush = common dso_local global i32 0, align 4
@dpu_hw_ctl_update_pending_flush = common dso_local global i32 0, align 4
@dpu_hw_ctl_get_pending_flush = common dso_local global i32 0, align 4
@dpu_hw_ctl_trigger_flush = common dso_local global i32 0, align 4
@dpu_hw_ctl_get_flush_register = common dso_local global i32 0, align 4
@dpu_hw_ctl_trigger_start = common dso_local global i32 0, align 4
@dpu_hw_ctl_trigger_pending = common dso_local global i32 0, align 4
@dpu_hw_ctl_intf_cfg = common dso_local global i32 0, align 4
@dpu_hw_ctl_reset_control = common dso_local global i32 0, align 4
@dpu_hw_ctl_wait_reset_status = common dso_local global i32 0, align 4
@dpu_hw_ctl_clear_all_blendstages = common dso_local global i32 0, align 4
@dpu_hw_ctl_setup_blendstage = common dso_local global i32 0, align 4
@dpu_hw_ctl_get_bitmask_sspp = common dso_local global i32 0, align 4
@dpu_hw_ctl_get_bitmask_mixer = common dso_local global i32 0, align 4
@dpu_hw_ctl_get_bitmask_intf = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dpu_hw_ctl_ops*, i64)* @_setup_ctl_ops to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_setup_ctl_ops(%struct.dpu_hw_ctl_ops* %0, i64 %1) #0 {
  %3 = alloca %struct.dpu_hw_ctl_ops*, align 8
  %4 = alloca i64, align 8
  store %struct.dpu_hw_ctl_ops* %0, %struct.dpu_hw_ctl_ops** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i32, i32* @dpu_hw_ctl_clear_pending_flush, align 4
  %6 = load %struct.dpu_hw_ctl_ops*, %struct.dpu_hw_ctl_ops** %3, align 8
  %7 = getelementptr inbounds %struct.dpu_hw_ctl_ops, %struct.dpu_hw_ctl_ops* %6, i32 0, i32 14
  store i32 %5, i32* %7, align 4
  %8 = load i32, i32* @dpu_hw_ctl_update_pending_flush, align 4
  %9 = load %struct.dpu_hw_ctl_ops*, %struct.dpu_hw_ctl_ops** %3, align 8
  %10 = getelementptr inbounds %struct.dpu_hw_ctl_ops, %struct.dpu_hw_ctl_ops* %9, i32 0, i32 13
  store i32 %8, i32* %10, align 4
  %11 = load i32, i32* @dpu_hw_ctl_get_pending_flush, align 4
  %12 = load %struct.dpu_hw_ctl_ops*, %struct.dpu_hw_ctl_ops** %3, align 8
  %13 = getelementptr inbounds %struct.dpu_hw_ctl_ops, %struct.dpu_hw_ctl_ops* %12, i32 0, i32 12
  store i32 %11, i32* %13, align 4
  %14 = load i32, i32* @dpu_hw_ctl_trigger_flush, align 4
  %15 = load %struct.dpu_hw_ctl_ops*, %struct.dpu_hw_ctl_ops** %3, align 8
  %16 = getelementptr inbounds %struct.dpu_hw_ctl_ops, %struct.dpu_hw_ctl_ops* %15, i32 0, i32 11
  store i32 %14, i32* %16, align 4
  %17 = load i32, i32* @dpu_hw_ctl_get_flush_register, align 4
  %18 = load %struct.dpu_hw_ctl_ops*, %struct.dpu_hw_ctl_ops** %3, align 8
  %19 = getelementptr inbounds %struct.dpu_hw_ctl_ops, %struct.dpu_hw_ctl_ops* %18, i32 0, i32 10
  store i32 %17, i32* %19, align 4
  %20 = load i32, i32* @dpu_hw_ctl_trigger_start, align 4
  %21 = load %struct.dpu_hw_ctl_ops*, %struct.dpu_hw_ctl_ops** %3, align 8
  %22 = getelementptr inbounds %struct.dpu_hw_ctl_ops, %struct.dpu_hw_ctl_ops* %21, i32 0, i32 9
  store i32 %20, i32* %22, align 4
  %23 = load i32, i32* @dpu_hw_ctl_trigger_pending, align 4
  %24 = load %struct.dpu_hw_ctl_ops*, %struct.dpu_hw_ctl_ops** %3, align 8
  %25 = getelementptr inbounds %struct.dpu_hw_ctl_ops, %struct.dpu_hw_ctl_ops* %24, i32 0, i32 8
  store i32 %23, i32* %25, align 4
  %26 = load i32, i32* @dpu_hw_ctl_intf_cfg, align 4
  %27 = load %struct.dpu_hw_ctl_ops*, %struct.dpu_hw_ctl_ops** %3, align 8
  %28 = getelementptr inbounds %struct.dpu_hw_ctl_ops, %struct.dpu_hw_ctl_ops* %27, i32 0, i32 7
  store i32 %26, i32* %28, align 4
  %29 = load i32, i32* @dpu_hw_ctl_reset_control, align 4
  %30 = load %struct.dpu_hw_ctl_ops*, %struct.dpu_hw_ctl_ops** %3, align 8
  %31 = getelementptr inbounds %struct.dpu_hw_ctl_ops, %struct.dpu_hw_ctl_ops* %30, i32 0, i32 6
  store i32 %29, i32* %31, align 4
  %32 = load i32, i32* @dpu_hw_ctl_wait_reset_status, align 4
  %33 = load %struct.dpu_hw_ctl_ops*, %struct.dpu_hw_ctl_ops** %3, align 8
  %34 = getelementptr inbounds %struct.dpu_hw_ctl_ops, %struct.dpu_hw_ctl_ops* %33, i32 0, i32 5
  store i32 %32, i32* %34, align 4
  %35 = load i32, i32* @dpu_hw_ctl_clear_all_blendstages, align 4
  %36 = load %struct.dpu_hw_ctl_ops*, %struct.dpu_hw_ctl_ops** %3, align 8
  %37 = getelementptr inbounds %struct.dpu_hw_ctl_ops, %struct.dpu_hw_ctl_ops* %36, i32 0, i32 4
  store i32 %35, i32* %37, align 4
  %38 = load i32, i32* @dpu_hw_ctl_setup_blendstage, align 4
  %39 = load %struct.dpu_hw_ctl_ops*, %struct.dpu_hw_ctl_ops** %3, align 8
  %40 = getelementptr inbounds %struct.dpu_hw_ctl_ops, %struct.dpu_hw_ctl_ops* %39, i32 0, i32 3
  store i32 %38, i32* %40, align 4
  %41 = load i32, i32* @dpu_hw_ctl_get_bitmask_sspp, align 4
  %42 = load %struct.dpu_hw_ctl_ops*, %struct.dpu_hw_ctl_ops** %3, align 8
  %43 = getelementptr inbounds %struct.dpu_hw_ctl_ops, %struct.dpu_hw_ctl_ops* %42, i32 0, i32 2
  store i32 %41, i32* %43, align 4
  %44 = load i32, i32* @dpu_hw_ctl_get_bitmask_mixer, align 4
  %45 = load %struct.dpu_hw_ctl_ops*, %struct.dpu_hw_ctl_ops** %3, align 8
  %46 = getelementptr inbounds %struct.dpu_hw_ctl_ops, %struct.dpu_hw_ctl_ops* %45, i32 0, i32 1
  store i32 %44, i32* %46, align 4
  %47 = load i32, i32* @dpu_hw_ctl_get_bitmask_intf, align 4
  %48 = load %struct.dpu_hw_ctl_ops*, %struct.dpu_hw_ctl_ops** %3, align 8
  %49 = getelementptr inbounds %struct.dpu_hw_ctl_ops, %struct.dpu_hw_ctl_ops* %48, i32 0, i32 0
  store i32 %47, i32* %49, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
